force-app/main/default/objects/Case/fields/Reason_Recall_Postponed_Declined_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Recall_Postponed_Declined_Other__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>Add other reason why recall activity was not performed</description>
    <inlineHelpText>Add other reason why recall activity was not performed</inlineHelpText>
    <label>Reason Recall Postponed/ Declined-Other</label>
    <type>TextArea</type>
</CustomField>