force-app/main/default/objects/Case/fields/Recall__c.field-meta.xml
<CustomField>
    <fullName>Recall__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>When set to true it implies this is a Recall case</description>
    <label>Recall</label>
    <type>Checkbox</type>
</CustomField>