force-app/main/default/objects/Case/fields/Recall_Acknowledgement_Status__c.field-meta.xml
<CustomField>
    <fullName>Recall_Acknowledgement_Status__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>Records customers response to recall</description>
    <label>Recall Acknowledgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Confirmed Receipt of Notification and Understands its Content</fullName>
            </value>
            <value>
                <fullName>Customer has not responded</fullName>
            </value>
            <value>
                <fullName>Customer unreachable due to Sanctions</fullName>
            </value>
            <value>
                <fullName>Instrument permanently decommissioned / No longer in customer&apos;s possession / Company Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>