force-app/main/default/objects/Case/fields/Recall_Activity__c.field-meta.xml
<CustomField>
    <fullName>Recall_Activity__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>Record recall activity performed on this product.</description>
    <inlineHelpText>Record recall activity performed on this product.</inlineHelpText>
    <label>Recall Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recall Actions Acknowledged &amp; Completed</fullName>
            </value>
            <value>
                <fullName>Recall Actions Postponed</fullName>
            </value>
            <value>
                <fullName>Recall Actions Declined</fullName>
            </value>
              <value>
                <fullName>Recall Activity Non-responder</fullName>
              </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>