force-app/main/default/objects/Case/fields/Recall_FSN_PQN_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Recall_FSN_PQN_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when customer has provided required acknowledgement for a related recall FAN</description>
    <inlineHelpText>Check this box when customer has provided required acknowledgement for a related recall FAN</inlineHelpText>
    <label>Recall FSN/PQN Acknowledged</label>
    <type>Checkbox</type>
</CustomField>