force-app/main/default/objects/Case/fields/Record_Edit_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Edit_Source__c</fullName>
    <description>This field will be used in the back end apex classes to determine what is the source of the case record edit.</description>
    <label>Record Edit Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clone Case SFM</fullName>
            </value>
            <value>
                <fullName>Close as Notification Quick Action</fullName>
            </value>
            <value>
                <fullName>Close as Spam Quick Action</fullName>
            </value>
            <value>
                <fullName>Converted to BI Case</fullName>
            </value>
            <value>
                <fullName>Converted to Service Request</fullName>
            </value>
            <value>
                <fullName>Notification/Spam quick action</fullName>
                <isActive>false</isActive>
                <label>Notification/Spam quick action</label>
            </value>
            <value>
                <fullName>Send to Medical Affairs</fullName>
            </value>
            <value>
                <fullName>WorkOrder from SR Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>