force-app/main/default/objects/Case/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>US:1074 To make Record Type as Uneditable</description>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>