force-app/main/default/objects/Case/fields/Record_Updated_from_SFM__c.field-meta.xml
<CustomField>
    <fullName>Record_Updated_from_SFM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when Record Updated from SFM</description>
    <label>Record Updated from SFM</label>
    <type>Checkbox</type>
</CustomField>