force-app/main/default/objects/Case/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This field will get value from Territory Region field of Account</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMR</fullName>
            </value>
	    <value>
                <fullName>AMEA</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
		<isActive>false</isActive>
                <label>APJ</label>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
	    <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <isActive>false</isActive>
                <label>EMEA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>