force-app/main/default/objects/Case/fields/Registrant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Email_Address__c</fullName>
    <description>Field to capture email address of the registrant</description>
    <inlineHelpText>Email of the contact who registered the software subscription.</inlineHelpText>
    <label>Registrant Email Address</label>
    <type>Email</type>
</CustomField>