force-app/main/default/objects/Case/fields/Relocated_Account__c.field-meta.xml
<CustomField>
    <fullName>Relocated_Account__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<description>CMCP-22:This Field stores the Relocation Account lookup record reference. It is populated by CP from Relocation SFM</description>
	<label>Relocated Account</label>
	<referenceTo>Account</referenceTo>
	<relationshipLabel>Cases</relationshipLabel>
	<relationshipName>Cases</relationshipName>
	<type>Lookup</type>
</CustomField>