force-app/main/default/objects/Case/fields/Relocated_Location__c.field-meta.xml
<CustomField>
    <fullName>Relocated_Location__c</fullName>
	<description>This Field stores the Relocation Location lookup record reference. It is populated by CP from Relocation SFM</description>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Relocated Location</label>
	<referenceTo>SVMXC__Site__c</referenceTo>
	<relationshipLabel>Cases (Relocated Location)</relationshipLabel>
	<relationshipName>Cases</relationshipName>
	<type>Lookup</type>
</CustomField>