force-app/main/default/objects/Case/fields/Relocation_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Integration_Message__c</fullName>
	<description>CMCP-22 : This field stores the Integration Messages from Relocation API</description>
	<label>Relocation Integration Message</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>