force-app/main/default/objects/Case/fields/Relocation_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Requested_By__c</fullName>
	<description>This Field stores the User who requested the Relocation WO. It is populated from Relocation SFM with logged in user&apos;s value.</description>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Relocation Requested By</label>
	<referenceTo>User</referenceTo>
	<relationshipName>Cases5</relationshipName>
	<type>Lookup</type>
</CustomField>