force-app/main/default/objects/Case/fields/Reopen_Requester__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DCP-1012 :</description>
    <label>Reopen Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>