force-app/main/default/objects/Case/fields/Request_Ownership_Status__c.field-meta.xml
<CustomField>
   	<fullName>Request_Ownership_Status__c</fullName>
        <description>Whenever a ownership request is done by CP user, this field will track the request and completion status.</description>
        <label>Request Ownership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Change_Ownership_Request_Status</valueSetName>
        </valueSet>
</CustomField>