force-app/main/default/objects/Case/fields/Request_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Request_Receiver__c</fullName>
    <description>Role who recieved the reopen request.</description>
    <label>Request Receiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>