force-app/main/default/objects/Case/fields/Requested_Information__c.field-meta.xml
<CustomField>
    <fullName>Requested_Information__c</fullName>
    <description>Provide requested information in detail.</description>
    <label>Requested Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>