force-app/main/default/objects/Case/fields/Required_Executive_Action__c.field-meta.xml
<CustomField>
    <fullName>Required_Executive_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be available for &apos;Hot site elevation&apos; category</description>
    <label>Required Executive Action</label>
    <type>Checkbox</type>
</CustomField>