force-app/main/default/objects/Case/fields/Sent_to_Qualtrics__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Qualtrics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Qualtrics Surveys: This checkbox will be checked whenever a case record triggers a Qualtrics Survey</description>
    <label>Sent to Qualtrics</label>
    <type>Checkbox</type>
</CustomField>