force-app/main/default/objects/Case/fields/Shipping_Origin__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Origin__c</fullName>
    <businessOwnerUser>landerson@illumina.com</businessOwnerUser>
    <description>To capture shipping origin details</description>
    <label>Shipping Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU UPS Melbourne (6530)</fullName>
            </value>
            <value>
                <fullName>Brazil Depot (2120)</fullName>
            </value>
            <value>
                <fullName>CN UP Shanghai (6540)</fullName>
            </value>
            <value>
                <fullName>GB Eindhoven (3340)</fullName>
            </value>
            <value>
                <fullName>Illumina Cambridge - 3PL DHL (3400)</fullName>
            </value>
            <value>
                <fullName>Illumina Cambridge GB (3040)</fullName>
            </value>
            <value>
                <fullName>Illumina Canada ULC (2510)</fullName>
            </value>
            <value>
                <fullName>Illumina China Limited - HTDK (6580)</fullName>
            </value>
            <value>
                <fullName>Illumina GB Hayward MFG (3310)</fullName>
            </value>
            <value>
                <fullName>Illumina GB Mira Loma (3320)</fullName>
            </value>
            <value>
                <fullName>Illumina GB San Diego MFG (3300)</fullName>
            </value>
            <value>
                <fullName>Illumina Harrisburg (3370)</fullName>
            </value>
            <value>
                <fullName>Illumina Korea Limited - DKSH (6560)</fullName>
            </value>
            <value>
                <fullName>Illumina Louisville (3330)</fullName>
            </value>
            <value>
                <fullName>SG Singapore MFG (6100)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>