force-app/main/default/objects/Case/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <description>US-681
Capture software version of Installed Product associated with the case
Generated manually</description>
    <label>Software Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>