force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>US-681
To select Sub Type of Case
Generated manually</description>
    <label>Sub Type</label>
<!--QACM-40-->
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Customer Facing Notifications</fullName>
            </value>
            <value>
                <fullName>Billable Service</fullName>
            </value>
            <value>
                <fullName>Repair Center (Depot)</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Service Support</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>General Issue</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>