force-app/main/default/objects/Case/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links/related the Case record with  Service/Maintenance Contract object having ERP Contract Type = Software (ZWS), ZCQ or Software Contract and Account same as this Case</description>
    <label>Subscription</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 3 OR 4) AND 2) OR 5</booleanFilter>
        <errorMessage>The Contact on this case is unrelated to the account on the Subscription. Either 1) Select a Subscription that is related to the account OR 2) Select a different Contact and Account that matches the Subscription.</errorMessage>
        <filterItems>
            <field>SVMXC__Service_Contract__c.ERP_Contract_Type__c</field>
            <operation>equals</operation>
            <value>Software (ZWS)</value>
        </filterItems>
        <filterItems>
            <field>SVMXC__Service_Contract__c.SVMXC__Company__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>SVMXC__Service_Contract__c.ERP_Contract_Type__c</field>
            <operation>equals</operation>
            <value>Software Contract</value>
        </filterItems>
        <filterItems>
            <field>SVMXC__Service_Contract__c.ERP_Contract_Type__c</field>
            <operation>equals</operation>
            <value>Quantity Contract (ZCQ)</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Cases (Subscription)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>