force-app/main/default/objects/Case/fields/SubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionID__c</fullName>
    <description>This field is created to store the subscription Id from the service contract</description>
    <inlineHelpText>The Subscription ID is a combination of the ERP Contract Header - Product Code - Line Number.</inlineHelpText>
    <label>Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>