force-app/main/default/objects/Case/fields/Suspected_Causes_Experiments_Done__c.field-meta.xml
<CustomField>
    <fullName>Suspected_Causes_Experiments_Done__c</fullName>
    <description>Describe the causes suspected or the experiments performed.</description>
    <label>Suspected Causes / Experiments Done</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>