force-app/main/default/objects/Case/fields/SVMXC__BW_Selected_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__BW_Selected_On__c</fullName>
    <label>BW Selected On</label>
    <type>DateTime</type>
</CustomField>