force-app/main/default/objects/Case/fields/SVMXC__Entitlement_Notes__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Entitlement_Notes__c</fullName>
    <description>Additional information entered in Case during customer entitlement</description>
    <inlineHelpText>Additional information entered in Case during customer entitlement</inlineHelpText>
    <label>Entitlement Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>