force-app/main/default/objects/Case/fields/SVMXC__Initial_Response_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Initial_Response_Customer_By__c</fullName>
    <label>Initial Response Customer By</label>
    <type>DateTime</type>
</CustomField>