force-app/main/default/objects/Case/fields/SVMXC__Is_Entitlement_Performed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Is_Entitlement_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Entitlement Performed</label>
    <type>Checkbox</type>
</CustomField>