force-app/main/default/objects/Case/fields/SVMXC__Is_Service_Covered__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Is_Service_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service Covered</label>
    <type>Checkbox</type>
</CustomField>