force-app/main/default/objects/Case/fields/SVMXC__Is_SLA_Calculated__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Is_SLA_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate SLA</label>
    <type>Checkbox</type>
</CustomField>