force-app/main/default/objects/Case/fields/SVMXC__Onsite_Response_Internal_By__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Onsite_Response_Internal_By__c</fullName>
    <description>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</description>
    <inlineHelpText>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</inlineHelpText>
    <label>Onsite Response Internal By</label>
    <type>DateTime</type>
</CustomField>