force-app/main/default/objects/Case/fields/SVMXC__PM_Plan__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__PM_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preventive Maintenance Plan</label>
    <referenceTo>SVMXC__PM_Plan__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>