force-app/main/default/objects/Case/fields/SVMXC__Preferred_End_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Preferred_End_Time__c</fullName>
    <description>End time for the case to be scheduled. Calculated automatically based on booking window selection.</description>
    <inlineHelpText>End time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
    <label>Preferred End Time</label>
    <type>DateTime</type>
</CustomField>