force-app/main/default/objects/Case/fields/SVMXC__Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Preferred_Start_Time__c</fullName>
    <description>Start time for the case to be scheduled. Calculated automatically based on booking window selection.</description>
    <inlineHelpText>Start time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
    <label>Preferred Start Time</label>
    <type>DateTime</type>
</CustomField>