force-app/main/default/objects/Case/fields/SVMXC__Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the product for which customer is seeking support. Reference to Product2 object.</description>
    <inlineHelpText>Choose or enter the Product name for which the customer is seeking support.</inlineHelpText>
    <label>Component Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>