force-app/main/default/objects/Case/fields/SVMXC__SContract_Business_Hour__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SContract_Business_Hour__c</fullName>
    <formula>CASESAFEID(SVMXC__Service_Contract__r.SVMXC__Business_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SContract Business Hour</label>
    <type>Text</type>
</CustomField>