force-app/main/default/objects/Case/fields/SVMXC__Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</description>
    <inlineHelpText>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</inlineHelpText>
    <label>Service/Maintenance Contract</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>