force-app/main/default/objects/Case/fields/SVMXC__Site__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer location where the contact is reporting the problem or the location of the installed product.</description>
    <inlineHelpText>The customer location where the contact is reporting the problem or the location of the installed product.</inlineHelpText>
    <label>Site</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Cases Reported From This Site</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>