force-app/main/default/objects/Case/fields/SVMXC__SLA_Clock_Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SLA_Clock_Pause_Reason__c</fullName>
    <label>SLA Clock Pause Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>