force-app/main/default/objects/Case/fields/SVMXC__SLA_Clock_Pause_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SLA_Clock_Pause_Time__c</fullName>
    <label>SLA Clock Pause Time</label>
    <type>DateTime</type>
</CustomField>