force-app/main/default/objects/Case/fields/Time_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Close__c</fullName>
    <description>Calculates the number of hours between created and closed time for the case</description>
    <formula>ABS((ClosedDate - CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>