force-app/main/default/objects/Case/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <businessOwnerGroup>Service_Schema_Owner_CM_FS</businessOwnerGroup>
    <description>Contact title, if any</description>
    <formula>Contact.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>