force-app/main/default/objects/Case/fields/Unread_Emails__c.field-meta.xml
<CustomField>
    <fullName>Unread_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-681
To flag the cases when a new email is received on the case
Generated from automation</description>
    <label>Unread Emails</label>
    <type>Checkbox</type>
</CustomField>