force-app/main/default/objects/Case/fields/Verification_Result__c.field-meta.xml
<CustomField>
    <fullName>Verification_Result__c</fullName>
    <description>Manual entry, Technician&apos;s verification result after the case completion.</description>
    <inlineHelpText>Specify how Illumina confirmed the issue has been resolved</inlineHelpText>
    <label>Verification Result</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>