force-app/main/default/objects/Case/fields/WeChatFollower__c.field-meta.xml
<CustomField>
    <fullName>WeChatFollower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to WeChat Follower.</description>
    <label>WeChat Follower</label>
    <referenceTo>Charket__WeChatFollower__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>