force-app/main/default/objects/Case/fields/WO_Type__c.field-meta.xml
<CustomField>
    <fullName>WO_Type__c</fullName>
    <formula>TEXT(Work_Order__r.SVMXC__Order_Type__c)</formula>
    <label>WO Type</label>
    <type>Text</type>
</CustomField>