force-app/main/default/objects/Case/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the work order for elevation case</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Elevation Case</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>