force-app/main/default/objects/Case/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <description>The field would keep a track of the work order related to the case.
If no work orders, value = &apos;Not applicable&apos;
If atleast one work order not completed / closed, value = &apos;In Progress&apos;
If all work orders completed but not closed, value = &apos;Completed&apos;
If all work order closed, value = &apos;Closed&apos;</description>
    <label>Work Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>